Fixed table becoming full width and stretching when there are few results.

--- a/MOSTComputers.UI.Web.Blazor/MOSTComputers.UI.Web.Blazor/Components/Pages/Home.razor.css
+++ b/MOSTComputers.UI.Web.Blazor/MOSTComputers.UI.Web.Blazor/Components/Pages/Home.razor.css
@@ -103,7 +103,7 @@ input[type=number] {
 
 .products-data-table {
     width: 100%;
-    height: 100%;
+    max-height: 100%;
     font-size: smaller;
     background-color: var(--products-table-header-background-color, #FFFFFF);
 }
